# groom

./: .gitignore  README.md
backend/: docker-compose.yml  pyproject.toml
backend/app/: .env  depends.py  main.py  requirements.txt
backend/app/core/: config.py  db.py  models.py
backend/app/repositories/: auth.py  order.py  user.py
backend/app/rotutes/: auth.py  user.py
backend/app/routes/: auth.py  order.py  user.py
backend/app/schemas/: auth.py  order.py  user.py
backend/app/services/: auth.py  file.py  order.py  user.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  fonts.css  index.css  main.tsx
frontend/src/modules/advantages/: advantages.module.css  advantages.tsx
frontend/src/modules/examples/: examples.module.css  examples.tsx
frontend/src/modules/faq/: faq.module.css  faq.tsx
frontend/src/modules/finished-orders/: finished-orders.module.css  finished-orders.tsx
frontend/src/modules/form-block/: form-block.module.css  form-block.tsx
frontend/src/modules/header/: header.module.css  header.tsx
frontend/src/modules/header-personal-account/: header-personal-account.module.css  header-personal-account.tsx
frontend/src/modules/hero/: hero.module.css  hero.tsx
frontend/src/modules/login-form/: login-form.module.css  login-form.tsx
frontend/src/modules/order-form/: order-form.module.css  order-form.tsx
frontend/src/modules/price-list/: price-list.module.css  price-list.tsx
frontend/src/pages/: groom.tsx  home.tsx  login.tsx  pages.module.css  personal-account.tsx
(+61 files in other folders)
